<resources>
    <string name="app_name">UsersApp</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="incorrect_email">Incorrect Email</string>
    <string name="incorrect_name">Incorrect Name</string>
    <string name="incorrect_age">Incorrect Age</string>
</resources>