<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/size_24"
        android:layout_height="@dimen/size_24"
        android:layout_marginStart="@dimen/padding_24"
        android:layout_marginTop="@dimen/padding_16"
        android:src="@drawable/ic_arrow_back"
        app:tint="?attr/colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_56"
        android:text="@string/edit_profile"
        android:textSize="16sp"
        android:textColor="?attr/colorOnSurface"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_24"
        android:layout_marginTop="@dimen/padding_32"
        android:textSize="14sp"
        android:textColor="?attr/colorPrimary"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_56"
        android:layout_marginStart="@dimen/padding_24"
        android:layout_marginEnd="@dimen/padding_24"
        android:maxLines="1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameLabel"/>

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_24"
        android:layout_marginTop="@dimen/padding_32"
        android:textSize="14sp"
        android:textColor="?attr/colorPrimary"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_56"
        android:layout_marginStart="@dimen/padding_24"
        android:layout_marginEnd="@dimen/padding_24"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"/>

    <TextView
        android:id="@+id/tvAgeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_24"
        android:layout_marginTop="@dimen/padding_32"
        android:textSize="14sp"
        android:textColor="?attr/colorPrimary"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>

    <EditText
        android:id="@+id/etAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_24"
        android:layout_marginEnd="@dimen/padding_24"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAgeLabel"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_48"
        android:layout_marginStart="@dimen/padding_24"
        android:layout_marginEnd="@dimen/padding_24"
        android:layout_marginBottom="@dimen/padding_32"
        android:text="@string/save"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>